# comrak-wasm

./: .gitattributes  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.ts  deno.json  mod.bench.ts  mod.test.ts  mod.ts  rust-toolchain.toml  test.ts
.github/workflows/: ci.yml
crates/comrak-wasm/: Cargo.toml
crates/comrak-wasm/src/: lib.rs
examples/: shiki_highlighter.ts
lib/: brotli.js  comrak_wasm.d.ts  comrak_wasm.internal.js  comrak_wasm.js
patches/comrak-labs/: Cargo.toml.diff
patches/comrak-labs/src/: adapters.rs.diff  arena_tree.rs.diff  lib.rs.diff  nodes.rs.diff  xml.rs.diff
patches/comrak-labs/src/parser/: mod.rs.diff  options.rs.diff  phoenix_heex.rs.diff  shortcodes.rs.diff
patches/comrak-labs/src/plugins/: syntect.rs.diff
scripts/: build.ts  parse_comrak_version.ts  patch_wasm_opt.sh  wasm_opt.sh
src/: _internal.ts  _wasm.ts  adapters.ts  cm.test.ts  cm.ts  html.bench.ts  html.test.ts  html.ts  lib.rs  nodes.ts  options.ts  parse.ts  xml.ts
src/lib/: comrak_wasm.d.ts  comrak_wasm.js
