[package]
  name = "comrak-wasm"
  version = "0.4.0"
  authors = [
    "Luca Casonato <hello@lcas.dev>",
    "Nick Berlette <nick@berlette.com>",
  ]
  edition = "2024"

[lib]
  crate-type = ["cdylib"]

[features]
  default = ["alloc"]
  alloc   = ["dep:lol_alloc", "serde/alloc", "wasm-bindgen/gg-alloc"]
  mt      = ["alloc"]

[dependencies]
  comrak             = { version = "=0.17.0", default-features = false }
  js-sys             = "=0.3.77"
  serde              = { version = "=1.0.219", features = ["derive"] }
  wasm-bindgen       = { version = "=0.2.100", features = [] }
  serde-wasm-bindgen = "=0.6.5"
  lol_alloc          = { version = "=0.4.1", optional = true }

[profile.release]
  lto       = true
  opt-level = "z"
  panic     = "abort"
